--- a/contributions.Rmd
+++ b/contributions.Rmd
@@ -73,7 +73,7 @@ quoted text with that general information!
  
  I'm sure that I'll get more questions as I explore the datas. I'll show you which questions I get when I explore the data and show the results of the exploration.
  
-# Univariate Plots Section
+# Basic Data Exploration Section
 
 > **Tip**: In this section, you should perform some preliminary exploration of
 your dataset. Run some summaries of the data and create univariate plots to
@@ -219,6 +219,8 @@ str(Data)
 ```
 
  I can see that 'cand_party' and 'if_nominee' columns are added to Data.
+
+# Univariate Plots Section
 
  Now I'm going to get univariate plots.
  
